fix: Cloud icon was too close to home text button
CSS selector was not adapted to how this icon is added in v8 version.

--- a/src/styles/apps.css
+++ b/src/styles/apps.css
@@ -190,7 +190,7 @@
   justify-content: flex-start;
 }
 
-[role=banner] [role=menuitem].coz-apps-home-btn img {
+[role=banner] [role=menuitem].coz-apps-home-btn svg {
   width: 1rem;
   height: 1rem;
   margin-right: .5rem;
